# protify

./: .editorconfig  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  cliff.toml  justfile  pre-release.sh
builder/: Cargo.toml
gen-readme/: Cargo.toml
gen-readme/src/: main.rs
no-std-models/: Cargo.toml
no-std-models/src/: lib.rs
prelude/: Cargo.toml
prelude/src/: decl_macros.rs  extension.rs  field.rs  file.rs  lazy.rs  lib.rs  macros.rs  message.rs  oneof.rs  optional.rs  package.rs  proto_enum.rs  proto_message.rs  proto_type.rs  registry.rs  rendering_utils.rs  service.rs  test_utils.rs  well_known_types.rs
prelude/src/guide/: cel_validation.md  collecting_items.md  correctness.md  diesel_usage.md  enum_ref.md  extension_ref.md  field_ref.md  generating_files.md  limitations.md  managing_files.md  message_ref.md  mod.rs  oneof_ref.md  package_setup.md  proxied.md  proxied_implementations.md  reflection_usage.md  reusing_files.md  reusing_oneofs.md  roadmap.md  schema_features.md  server_usage.md  service_ref.md  tips.md  usage_with_tonic.md  validators.md
prelude/src/options/: common_options.rs  mod.rs
prelude/src/validators/: any.rs  bool.rs  builder_internals.rs  bytes.rs  cel.rs  common_strings.rs  duration.rs  enums.rs  field_context.rs  field_mask.rs  floats.rs  integers.rs  lookup.rs  map.rs  message.rs  mod.rs  oneof.rs  repeated.rs  string.rs  timestamp.rs  violations.rs
prelude/src/validators/any/: builder.rs
prelude/src/validators/bool/: builder.rs
prelude/templates/: enum.proto.j2  file.proto.j2  message.proto.j2  option_value.proto.j2  render_macros.j2  service.proto.j2
protify/: Cargo.toml
protify-build/: Cargo.toml
protify-build/src/: lib.rs
protify-proc-macro/: Cargo.toml
protify-proc-macro/docs/: enum_macro.md  extension_macro.md  field_ref.md  file_macro.md  message_macro.md  oneof_macro.md  service_macro.md
protify-proc-macro/src/: builder_macro.rs  cel_try_into.rs  enum_derive.rs  enum_proc_macro.rs  extension_macro.rs  file_macro.rs  lib.rs  message_proc_macro.rs  message_schema_impl.rs  oneof_proc_macro.rs  oneof_schema_impl.rs  package_macro.rs  proto_field.rs  reflection.rs  service_derive.rs  service_macro.rs
protify-proc-macro/src/attributes/: enum_attributes.rs  enum_variant_attributes.rs  extension_field_attributes.rs  field_attributes.rs  message_attributes.rs  message_info.rs  oneof_attributes.rs  service_attributes.rs  tag_allocator.rs  validator_tokens.rs
protify-proc-macro/src/impls/: consistency_checks.rs  conversions.rs  fallback_impls.rs  message_consistency_checks.rs  message_schema_impl.rs  message_validator_impl.rs  mod.rs  oneof_schema_impl.rs  oneof_validator_impl.rs
protify-proc-macro/src/internals/: builder_macro.rs  item_cloners.rs  mod.rs  path_utils.rs  well_known_type_impl.rs
protify-proc-macro/src/parsing/: enum_attributes.rs  enum_variant_attributes.rs  extension_field_attributes.rs  field_attributes.rs  field_data.rs  message_attributes.rs  message_info.rs  mod.rs  oneof_attributes.rs  oneof_info.rs  reserved_numbers.rs  service_attributes.rs  tag_allocator.rs  validator_tokens.rs
protify-proc-macro/src/reflection/: any_rules.rs  bool_rules.rs  bytes_rules.rs  duration_rules.rs  enum_reflection.rs  enum_rules.rs  field_mask_rules.rs  field_rules.rs  map_rules.rs  message_derive.rs  message_reflection.rs  message_rules.rs  numeric_rules.rs  oneof_derive.rs  oneof_reflection.rs  pool_loader.rs  repeated_rules.rs  string_rules.rs  timestamp_rules.rs
protify/src/: decl_macros.rs  enum_schema.rs  extension.rs  field.rs  file.rs  lazy.rs  lib.rs  message_schema.rs  oneof.rs  oneof_schema.rs  package.rs  proto_enum.rs  proto_message.rs  registry.rs  rendering_utils.rs  serde_impls.rs  service.rs  test_utils.rs  types.rs  well_known_types.rs
protify/src/guide/: cel_validation.md  code_elimination.md  correctness.md  database_mapping.md  database_usage.md  diesel_usage.md  limitations.md  managing_files.md  mod.rs  package_setup.md  proxies.md  reflection_usage.md  reusing_oneofs.md  roadmap.md  schema_features.md  tips.md  usage_with_tonic.md  validators.md
protify/src/options/: common_options.rs  mod.rs
protify/src/validators/: any.rs  bool.rs  builder_internals.rs  bytes.rs  cel.rs  duration.rs  enums.rs  field_context.rs  field_mask.rs  floats.rs  integers.rs  lookup.rs  map.rs  message.rs  mod.rs  oneof.rs  repeated.rs  string.rs  timestamp.rs  violations.rs
protify/templates/: enum.proto.j2  message.proto.j2  option_value.proto.j2  render_macros.j2  service.proto.j2
protify/tests/: code_elimination.rs
test-no-std/: Cargo.toml  build.rs
test-no-std/proto/: no_std_models.proto
test-no-std/src/: lib.rs  main.rs
test-reflection/: Cargo.toml  build.rs
test-reflection/proto/: test_schemas.proto
test-reflection/src/: lib.rs  main.rs
test-reflection/src/test/: any_tests.rs  bool_tests.rs  bytes_tests.rs  const_rules_tests.rs  duration_tests.rs  enums_tests.rs  fail_fast_tests.rs  field_mask_tests.rs  map_tests.rs  message_tests.rs  numeric_tests.rs  oneof_tests.rs  reflection_consistency_tests.rs  repeated_tests.rs  string_tests.rs  timestamp_tests.rs  tolerances_tests.rs
test-schemas/: Cargo.toml
test-schemas/rendering_test/: rendering.proto
test-schemas/src/: lib.rs  main.rs  server_models.rs
test-schemas/src/tests/: consistency_tests.rs  custom_errors_tests.rs  custom_validators_tests.rs  enum_methods_tests.rs  extern_paths_tests.rs  message_methods_tests.rs  mod.rs  oneof_tags_tests.rs  recursion_tests.rs  schema_tests.rs  tolerances_tests.rs  validation_tests.rs
test-server/: Cargo.toml  build.rs
test-server/proto/: db_test.proto
test-server/src/: lib.rs  main.rs
testing/: Cargo.toml
testing/examples/: code_elimination.rs
testing/src/: lib.rs  main.rs
testing/src/tests/: cel_checks_tests.rs  custom_errors_tests.rs  custom_validators_tests.rs  extern_paths_tests.rs  maps_tests.rs  mod.rs  oneof_tags_tests.rs  rendering_tests.rs  repeated_tests.rs  schema_tests.rs
testing/tests/: code_elimination.rs
(+186 files in other folders)
