[package]
name = "gen-readme"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.release]
release = false

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
