[package]
name = "no-std-models"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
prelude = { path = "../prelude", default-features = false }
prost = { version = "0.14", default-features = false }

[features]
default = []

[lints]
workspace = true
