[package]
name = "no-std-models"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
protify = { path = "../protify", default-features = false }
prost = { workspace = true }

[features]
default = []

[lints]
workspace = true
