[package]
name = "protify-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
prost-build = { workspace = true }
prost-reflect = { workspace = true }
document-features = { workspace = true }

[lints]
workspace = true

[features]
default = []

## Enables CEL-based validation
cel = []
