[package]
name = "protify-build"
version = "0.1.0"
description = "Build-time entrypoint for protify that generates validation logic for protobuf messages from protovalidate annotations"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["protobuf", "validation", "reflection"]

[dependencies]
prost-build = { workspace = true }
prost-reflect = { workspace = true }
document-features = { workspace = true }

[lints]
workspace = true

[features]
default = []

## Enables CEL-based validation
cel = []
