[package]
name = "protify-proc-macro"
version = "0.1.1"
description = "Proc macro implementations for protify."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["extra-traits", "full"] }
convert_case = { workspace = true }
proto-types = { workspace = true, features = ["default", "protovalidate"] }
syn-utils = { version = "0.5.0", path = "../../syn-utils/" }
prost-reflect = { version = "0.16", optional = true }
paste = "1"
bytes = "1"
bool-enum = { workspace = true }

[features]
default = []

reflection = ["dep:prost-reflect"]
cel = []

[dev-dependencies]
protify = { path = "../protify" }
indoc = { workspace = true }
