[package]
name = "test-no-std"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
protify = { path = "../protify", default-features = false, features = [
  "reflection",
] }
no-std-models = { path = "../no-std-models" }
prost = { workspace = true }
maplit = "1"

[build-dependencies]
prost-build = { workspace = true }
no-std-models = { path = "../no-std-models" }
protify = { path = "../protify", default-features = false, features = [
  "inventory",
  "std",
] }
protify-build = { path = "../protify-build", default-features = false }

[features]
reflection = []

[lints]
workspace = true
