[package]
name = "test-reflection"
publish = false
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
proto-types = { workspace = true, features = ["default", "all_common", "rpc"] }
protify = { path = "../protify/", features = ["reflection"] }
prost = { workspace = true, features = ["std"] }
paste = "1"
bytes = { workspace = true }
test-schemas = { path = "../test-schemas" }
maplit = "1.0"
similar-asserts = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protify-build = { path = "../protify-build", features = ["cel"] }

[lints]
workspace = true

[features]
reflection = []
