[package]
name = "test-schemas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
prelude = { path = "../prelude/" }
prost = { workspace = true }
paste = "1"
bytes = { workspace = true }

[lints]
workspace = true
