[package]
name = "test-schemas"
publish = false
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.release]
release = false

[dev-dependencies]
similar-asserts = { workspace = true }

[dependencies]
maplit = "1"
protify = { path = "../protify/", features = ["common-types", "rpc-types"] }
protify-proc-macro = { path = "../protify-proc-macro" }
prost = { workspace = true, features = ["std"] }
paste = "1"
bytes = { workspace = true }
proto-types = { workspace = true, features = ["diesel-sqlite", "all_common"] }
diesel = { workspace = true }

[lints]
workspace = true
