[package]
name = "test-server"
publish = false
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[package.metadata.release]
release = false

[dependencies]
tonic = { workspace = true, features = ["default"] }
tonic-prost = { workspace = true }
protify = { path = "../protify/", features = ["tonic"] }
proto-types = { workspace = true, features = ["diesel-sqlite"] }
diesel = { workspace = true }
deadpool-diesel = { version = "0.6", features = ["sqlite"] }
deadpool-sync = "0.1"
test-schemas = { path = "../test-schemas/" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
test-schemas = { path = "../test-schemas/" }

[lints]
workspace = true
