[package]
name = "testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true


[lints]
workspace = true

[dependencies]
similar-asserts = "1.7"
regex = { workspace = true }
bytes = "1"
maplit = "1"
paste = "1"
protify = { path = "../protify" }
protify-proc-macro = { path = "../protify-proc-macro" }
env_logger = "0.11"

[features]
abc = []
default = ["abc"]
